tests/positive/var-namings.sp

thisIsValid:Float = 1234.4;

(* Works because no type checking is beeing done Int != Float *)
_AlsoValid_a:Int = 65431.45;