tests/negative/var-namings.sp

thisIsValid:Double = 1234.4;

(* Works because no type checking is beeing done Int != Float *)
(* But since phase 1, type checking has been implemented, so this is no longer valid through this parser *)
_AlsoValid_a:Int = 65431.45;